--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <input type="number" id="cantidad-actividades" value="7">
         <button onclick="generarTabla()">Generar tabla</button>
         <div id="tabla-actividades"></div>
+        <div id="resultado"></div>
     </div>
 
     <script src="script.js"></script>
